# gaga

./: .clang-format  .gitignore  .gitmodules  .lvimrc  CMakeLists.txt  LICENSE  README.md  gaga.hpp  gaga.hpp.orig  novelty.hpp  speciation.hpp  tinypool.hpp
dna/: arraydna.hpp  vectordna.hpp
examples/: CMakeLists.txt
examples/biggest_int/: CMakeLists.txt  dna.hpp  evaluator.hpp  main.cpp
examples/grn/: grndna.hpp
examples/onemax/: mydna.hpp  simple_novelty.cpp  simple_onemax.cpp
examples/onemax/src/: mainevo.cpp
extra/gagazmq/: gagazmq.hpp  zmqhelper.hpp
extra/gagazmq/python/: Untitled.ipynb  gagaworker.py
extra/gagazmq/python/example/: CMakeLists.txt  client.py  server.cpp
extra/gagazmq/python/example/cmake/: FindSQLite3.cmake
extra/sqlitesave/: sqlitesave.hpp
extras/: mpigaga.hpp
gaga/: CMakeLists.txt  ga.hpp  gaga.h  gaga.hpp  individual.hpp  tools.cpp  tools.h
gaga/json/: json.hpp
gaga/jsonxx/: jsonxx.h
gaga/tests/: CMakeLists.txt  catch.hpp  config.cpp  dna.hpp  pareto.cpp  unit.cpp
include/: json.hpp  threadpool.hpp
src/: .clang_complete  evaluators.hpp  ga.hpp  grn.hpp  main.cpp  tools.cpp  tools.h
tests/: CMakeLists.txt  dna.hpp  gagazmq_tests.hpp  pareto.cpp  speciation.cpp  sqlite_tests.hpp  unit.cpp
tests/cmake/: FindZMQ.cmake
tests/grgen/: classic.hpp  common.h  grn.hpp  protein.hpp  real.hpp
tests/grgen/json/: json.hpp
tools/: evoplot
